; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_snapbuild.c_SnapBuildClearExportedSnapshot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_snapbuild.c_SnapBuildClearExportedSnapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ExportInProgress = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"clearing exported snapshot in wrong transaction state\00", align 1
@SavedResourceOwnerDuringExport = common dso_local global i32* null, align 8
@CurrentResourceOwner = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SnapBuildClearExportedSnapshot() #0 {
  %1 = load i32, i32* @ExportInProgress, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %13

4:                                                ; preds = %0
  %5 = call i32 (...) @IsTransactionState()
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %4
  %8 = load i32, i32* @ERROR, align 4
  %9 = call i32 @elog(i32 %8, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %7, %4
  %11 = call i32 (...) @AbortCurrentTransaction()
  %12 = load i32*, i32** @SavedResourceOwnerDuringExport, align 8
  store i32* %12, i32** @CurrentResourceOwner, align 8
  store i32* null, i32** @SavedResourceOwnerDuringExport, align 8
  store i32 0, i32* @ExportInProgress, align 4
  br label %13

13:                                               ; preds = %10, %3
  ret void
}

declare dso_local i32 @IsTransactionState(...) #1

declare dso_local i32 @elog(i32, i8*) #1

declare dso_local i32 @AbortCurrentTransaction(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
